--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -14,6 +14,9 @@
 	<add key="ClientValidationEnabled" value="true" />
 	<add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+	<add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DefaultConnection.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
 	<compilation debug="true" targetFramework="4.7.2" />
 	<httpRuntime targetFramework="4.7.2" />
@@ -73,7 +76,4 @@
 	  <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 	</providers>
   </entityFramework>
-  <connectionStrings>
-	<add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=\\FS-SF01\RDSusers$\rkisleva\Desktop\Vidly\Vidly\Vidly\App_Data\DefaultConnection.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
 </configuration>
