--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -13,7 +13,7 @@
 	<add key="webpages:Enabled" value="false" />
 	<add key="ClientValidationEnabled" value="true" />
 	<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	<add key="owin:AutomaticAppStartup" value="false" />
+	<!--<add key="owin:AutomaticAppStartup" value="false" /> -->
   </appSettings>
   <connectionStrings>
 	<add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DefaultConnection.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -66,7 +66,51 @@
 	  </dependentAssembly>
 		<dependentAssembly>
 			<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
+			<bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="Microsoft.Extensions.Options" publicKeyToken="adb9793829ddae60" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="Microsoft.Extensions.DependencyInjection" publicKeyToken="adb9793829ddae60" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="Microsoft.AspNetCore.Cryptography.Internal" publicKeyToken="adb9793829ddae60" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+		</dependentAssembly>
+		<dependentAssembly>
+			<assemblyIdentity name="Microsoft.Extensions.Identity.Core" publicKeyToken="adb9793829ddae60" culture="neutral" />
+			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
 		</dependentAssembly>
 	</assemblyBinding>
   </runtime>
