--- a/Vidly/packages.config
+++ b/Vidly/packages.config
@@ -6,6 +6,11 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net472" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net472" />
+  <package id="Glimpse.Ado" version="1.7.3" targetFramework="net472" />
+  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net472" />
+  <package id="Glimpse.EF6" version="1.6.5" targetFramework="net472" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net472" />
   <package id="jQuery" version="1.10.2" targetFramework="net472" />
   <package id="jquery.datatables" version="1.10.11" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
@@ -80,6 +85,8 @@
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="toastr" version="2.1.1" targetFramework="net472" />
+  <package id="Twitter.Typeahead" version="0.11.1" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
