--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -7,24 +7,26 @@
   <configSections>
 	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
-  <appSettings>
-	<add key="webpages:Version" value="3.0.0.0" />
-	<add key="webpages:Enabled" value="false" />
-	<add key="ClientValidationEnabled" value="true" />
-	<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	<!--<add key="owin:AutomaticAppStartup" value="false" /> -->
-  </appSettings>
+  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /><sectionGroup name="elmah">
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+    </sectionGroup></configSections>
   <connectionStrings>
 	<add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DefaultConnection.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings configSource="AppSettings.config"> </appSettings>
   <system.web>
+	<customErrors mode="On">
+	  <error statusCode="404" redirect="~/404.html" />
+	</customErrors>
 	<compilation debug="true" targetFramework="4.7.2" />
 	<httpRuntime targetFramework="4.7.2" />
   <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
             <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
-        </httpModules><httpHandlers>
+        <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" /><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" /><add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" /></httpModules><httpHandlers>
             <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
         </httpHandlers></system.web>
   <runtime>
@@ -131,6 +133,10 @@
 	</providers>
   </entityFramework>
 <system.webServer>
+  <httpErrors errorMode="Custom">
+	<remove statusCode="404" />
+	<error statusCode="404" path="404.html" responseMode="File" />
+  </httpErrors>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -139,9 +145,38 @@
     <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /></handlers>
   <validation validateIntegratedModeConfiguration="false" /><modules>
             <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
-        </modules></system.webServer><glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+        <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" /><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" /><add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" /></modules></system.webServer><glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
       <!-- 
           For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
           or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
       -->
-    </glimpse></configuration>
+    </glimpse>
+  <elmah>
+    <!--
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+        more information on remote access and securing ELMAH.
+    -->
+    <security allowRemoteAccess="false" />
+  </elmah>
+  <location path="elmah.axd" inheritInChildApplications="false">
+    <system.web>
+      <httpHandlers>
+        <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
+      </httpHandlers>
+	  
+	  <authorization>
+		<allow users="admin@vidly.com" />
+		<deny users="*" />
+	  </authorization>
+	  
+      <!-- 
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+        more information on using ASP.NET authorization securing ELMAH.
+      -->  
+    </system.web>
+    <system.webServer>
+      <handlers>
+        <add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
+      </handlers>
+    </system.webServer>
+  </location></configuration>
