--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -364,85 +364,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202007171934292_InitialModel.cs" />
-    <Compile Include="Migrations\202007171934292_InitialModel.designer.cs">
-      <DependentUpon>202007171934292_InitialModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007171944285_AddMembershipType.cs" />
-    <Compile Include="Migrations\202007171944285_AddMembershipType.designer.cs">
-      <DependentUpon>202007171944285_AddMembershipType.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007171957465_PopulateMembershipTypes.cs" />
-    <Compile Include="Migrations\202007171957465_PopulateMembershipTypes.designer.cs">
-      <DependentUpon>202007171957465_PopulateMembershipTypes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007172012305_ApplyAnnotationsToCustomerName.cs" />
-    <Compile Include="Migrations\202007172012305_ApplyAnnotationsToCustomerName.designer.cs">
-      <DependentUpon>202007172012305_ApplyAnnotationsToCustomerName.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007181539174_AddNameToMembershipType.cs" />
-    <Compile Include="Migrations\202007181539174_AddNameToMembershipType.designer.cs">
-      <DependentUpon>202007181539174_AddNameToMembershipType.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007181547225_SetNameToMembershipType.cs" />
-    <Compile Include="Migrations\202007181547225_SetNameToMembershipType.designer.cs">
-      <DependentUpon>202007181547225_SetNameToMembershipType.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007181558550_MakeMembershipTypeNameNotNullable.cs" />
-    <Compile Include="Migrations\202007181558550_MakeMembershipTypeNameNotNullable.designer.cs">
-      <DependentUpon>202007181558550_MakeMembershipTypeNameNotNullable.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007181606415_AddBirthdateToCustomer.cs" />
-    <Compile Include="Migrations\202007181606415_AddBirthdateToCustomer.designer.cs">
-      <DependentUpon>202007181606415_AddBirthdateToCustomer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007182106450_AddGenreClass.cs" />
-    <Compile Include="Migrations\202007182106450_AddGenreClass.designer.cs">
-      <DependentUpon>202007182106450_AddGenreClass.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007182114226_AddNewMovieAttributes.cs" />
-    <Compile Include="Migrations\202007182114226_AddNewMovieAttributes.designer.cs">
-      <DependentUpon>202007182114226_AddNewMovieAttributes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007182118448_AddGenreTypes.cs" />
-    <Compile Include="Migrations\202007182118448_AddGenreTypes.designer.cs">
-      <DependentUpon>202007182118448_AddGenreTypes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007241108391_SeedUsers.cs" />
-    <Compile Include="Migrations\202007241108391_SeedUsers.designer.cs">
-      <DependentUpon>202007241108391_SeedUsers.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007241215545_AddDrivingLicenseToApplicationUser.cs" />
-    <Compile Include="Migrations\202007241215545_AddDrivingLicenseToApplicationUser.designer.cs">
-      <DependentUpon>202007241215545_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007241420129_AddPhoneNumberToApplicationUser.cs" />
-    <Compile Include="Migrations\202007241420129_AddPhoneNumberToApplicationUser.designer.cs">
-      <DependentUpon>202007241420129_AddPhoneNumberToApplicationUser.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007270809139_AddRentalsToTheDatabase.cs" />
-    <Compile Include="Migrations\202007270809139_AddRentalsToTheDatabase.designer.cs">
-      <DependentUpon>202007270809139_AddRentalsToTheDatabase.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202007270838043_AddNumberAvailableToMovie.cs" />
-    <Compile Include="Migrations\202007270838043_AddNumberAvailableToMovie.designer.cs">
-      <DependentUpon>202007270838043_AddNumberAvailableToMovie.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\ApplicationDbContext.cs" />
-    <Compile Include="Models\Customer.cs" />
-    <Compile Include="Models\Genre.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\MembershipType.cs" />
-    <Compile Include="Models\Min18YearsIfAMember.cs" />
-    <Compile Include="Models\Movie.cs" />
-    <Compile Include="Models\Rental.cs" />
-    <Compile Include="Models\RoleName.cs" />
+    <Compile Include="Code\Validators\Min18YearsIfAMember.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\AccountViewModels.cs" />
+    <Compile Include="ViewModels\CustomerViewModel.cs" />
+    <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
@@ -809,60 +736,16 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202007171934292_InitialModel.resx">
-      <DependentUpon>202007171934292_InitialModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007171944285_AddMembershipType.resx">
-      <DependentUpon>202007171944285_AddMembershipType.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007171957465_PopulateMembershipTypes.resx">
-      <DependentUpon>202007171957465_PopulateMembershipTypes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007172012305_ApplyAnnotationsToCustomerName.resx">
-      <DependentUpon>202007172012305_ApplyAnnotationsToCustomerName.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007181539174_AddNameToMembershipType.resx">
-      <DependentUpon>202007181539174_AddNameToMembershipType.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007181547225_SetNameToMembershipType.resx">
-      <DependentUpon>202007181547225_SetNameToMembershipType.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007181558550_MakeMembershipTypeNameNotNullable.resx">
-      <DependentUpon>202007181558550_MakeMembershipTypeNameNotNullable.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007181606415_AddBirthdateToCustomer.resx">
-      <DependentUpon>202007181606415_AddBirthdateToCustomer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007182106450_AddGenreClass.resx">
-      <DependentUpon>202007182106450_AddGenreClass.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007182114226_AddNewMovieAttributes.resx">
-      <DependentUpon>202007182114226_AddNewMovieAttributes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007182118448_AddGenreTypes.resx">
-      <DependentUpon>202007182118448_AddGenreTypes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007241108391_SeedUsers.resx">
-      <DependentUpon>202007241108391_SeedUsers.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007241215545_AddDrivingLicenseToApplicationUser.resx">
-      <DependentUpon>202007241215545_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007241420129_AddPhoneNumberToApplicationUser.resx">
-      <DependentUpon>202007241420129_AddPhoneNumberToApplicationUser.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007270809139_AddRentalsToTheDatabase.resx">
-      <DependentUpon>202007270809139_AddRentalsToTheDatabase.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202007270838043_AddNumberAvailableToMovie.resx">
-      <DependentUpon>202007270838043_AddNumberAvailableToMovie.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Vidly.Entities\Vidly.Entities.csproj">
+      <Project>{178d712a-ce59-40ca-ba74-a042c1d9209d}</Project>
+      <Name>Vidly.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
