--- a/Vidly/Web.config
+++ b/Vidly/Web.config
@@ -7,28 +7,36 @@
   <configSections>
 	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /><sectionGroup name="elmah">
-      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
-      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
-      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
-      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
-    </sectionGroup></configSections>
+	<section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
+	<sectionGroup name="elmah">
+	  <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+	  <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+	  <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+	  <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+	</sectionGroup>
+  </configSections>
   <connectionStrings>
 	<add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DefaultConnection.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings configSource="AppSettings.config"> </appSettings>
   <system.web>
-	<customErrors mode="On">
+	<customErrors mode="Off">
 	  <error statusCode="404" redirect="~/404.html" />
 	</customErrors>
 	<compilation debug="true" targetFramework="4.7.2" />
 	<httpRuntime targetFramework="4.7.2" />
-  <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
-        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
-            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
-        <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" /><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" /><add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" /></httpModules><httpHandlers>
-            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
-        </httpHandlers></system.web>
+	<!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
+		<trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
+	<httpModules>
+	  <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+	  <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+	  <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
+	  <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+	</httpModules>
+	<httpHandlers>
+	  <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+	</httpHandlers>
+  </system.web>
   <runtime>
 	<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 	  <dependentAssembly>
@@ -71,54 +79,54 @@
 		<assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 		<bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
 	  </dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="Microsoft.Extensions.Options" publicKeyToken="adb9793829ddae60" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="Microsoft.Extensions.DependencyInjection" publicKeyToken="adb9793829ddae60" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="Microsoft.AspNetCore.Cryptography.Internal" publicKeyToken="adb9793829ddae60" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
-		</dependentAssembly>
-		<dependentAssembly>
-			<assemblyIdentity name="Microsoft.Extensions.Identity.Core" publicKeyToken="adb9793829ddae60" culture="neutral" />
-			<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
-		</dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="Microsoft.Extensions.Options" publicKeyToken="adb9793829ddae60" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="Microsoft.Extensions.DependencyInjection" publicKeyToken="adb9793829ddae60" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="Microsoft.AspNetCore.Cryptography.Internal" publicKeyToken="adb9793829ddae60" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+	  </dependentAssembly>
+	  <dependentAssembly>
+		<assemblyIdentity name="Microsoft.Extensions.Identity.Core" publicKeyToken="adb9793829ddae60" culture="neutral" />
+		<bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+	  </dependentAssembly>
 	</assemblyBinding>
   </runtime>
   <system.codedom>
@@ -132,51 +140,59 @@
 	  <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 	</providers>
   </entityFramework>
-<system.webServer>
-  <httpErrors errorMode="Custom">
-	<remove statusCode="404" />
-	<error statusCode="404" path="404.html" responseMode="File" />
-  </httpErrors>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /></handlers>
-  <validation validateIntegratedModeConfiguration="false" /><modules>
-            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
-        <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" /><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" /><add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" /></modules></system.webServer><glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
-      <!-- 
-          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
-          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
-      -->
-    </glimpse>
+  <system.webServer>
+	<httpErrors errorMode="Custom">
+	  <remove statusCode="404" />
+	  <error statusCode="404" path="404.html" responseMode="File" />
+	</httpErrors>
+	<handlers>
+	  <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+	  <remove name="OPTIONSVerbHandler" />
+	  <remove name="TRACEVerbHandler" />
+	  <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+	  <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+	</handlers>
+	<validation validateIntegratedModeConfiguration="false" />
+	<modules>
+	  <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+	  <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+	  <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
+	  <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+	</modules>
+  </system.webServer>
+  <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+	<!-- 
+		  For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
+		  or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
+	  -->
+  </glimpse>
   <elmah>
-    <!--
-        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
-        more information on remote access and securing ELMAH.
-    -->
-    <security allowRemoteAccess="false" />
+	<!--
+		See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+		more information on remote access and securing ELMAH.
+	-->
+	<security allowRemoteAccess="false" />
   </elmah>
   <location path="elmah.axd" inheritInChildApplications="false">
-    <system.web>
-      <httpHandlers>
-        <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
-      </httpHandlers>
-	  
+	<system.web>
+	  <httpHandlers>
+		<add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
+	  </httpHandlers>
+
 	  <authorization>
 		<allow users="admin@vidly.com" />
 		<deny users="*" />
 	  </authorization>
-	  
-      <!-- 
-        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
-        more information on using ASP.NET authorization securing ELMAH.
-      -->  
-    </system.web>
-    <system.webServer>
-      <handlers>
-        <add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
-      </handlers>
-    </system.webServer>
-  </location></configuration>
+
+	  <!-- 
+		See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+		more information on using ASP.NET authorization securing ELMAH.
+	  -->
+	</system.web>
+	<system.webServer>
+	  <handlers>
+		<add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
+	  </handlers>
+	</system.webServer>
+  </location>
+</configuration>
