--- a/Vidly.Services/Vidly.Services.csproj
+++ b/Vidly.Services/Vidly.Services.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -54,8 +57,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomersService.cs" />
+    <Compile Include="Dto\CustomerDto.cs" />
+    <Compile Include="Dto\CustomerListingItem.cs" />
+    <Compile Include="Dto\SaveCustomerResult.cs" />
     <Compile Include="MoviesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RentalsService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vidly.Entities\Vidly.Entities.csproj">
